Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <a id="neunet-basics" class="anchor" href="#neunet-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>neunet-basics</h1>
 
 <p>The basic knowledge on neural networks in a few python notebooks</p>
+
+<p><a href="course/Hopfield.ipybn">MNIST little howto</a></p>
         </section>
 
         <footer>
