--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>The basic knowledge on neural networks in a few python notebooks</p>
 
-<p><a href="course/Hopfield.ipybn">MNIST little howto</a></p>
+<p><a href="http://nbviewer.ipython.org/github/cecconeurale/neunet-basics/blob/master/course/mnist.ipynb">MNIST little howto</a></p>
         </section>
 
         <footer>
