--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>
 <a id="neunet-basics" class="anchor" href="#neunet-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>neunet-basics</h1>
 
-<p>The basic knowledge on neural networks in a few python notebooks</p>
+<p>Basic knowledge on neural networks in a few python notebooks</p>
 
 <p><a href="http://nbviewer.ipython.org/github/cecconeurale/neunet-basics/blob/master/course/mnist.ipynb">MNIST little howto</a></p>
         </section>
