--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
         <div class="wrapper">
             <header>
                 <h1>Neunet-basics</h1>
-                <p>Getting started with neural networks in python</p>
+                <h4>Getting started with neural networks in python</h4>
                 <p class="view"><a href="https://github.com/francesco-mannella/neunet-basics">View the Project on GitHub <small>francesco-mannella/neunet-basics</small></a></p>
                 <ul>
                     <li><a href="https://github.com/francesco-mannella/neunet-basics/zipball/master">Download <strong>ZIP File</strong></a></li>
                     <li><a href="https://github.com/francesco-mannella/neunet-basics/tarball/master">Download <strong>TAR Ball</strong></a></li>
                     <li><a href="https://github.com/francesco-mannella/neunet-basics">View On <strong>GitHub</strong></a></li>
                 </ul>
+            
+            This site is meant to be a short tour through the main
+            classic neural network types and how to build them using
+            python.
+
             </header>
-         </div>
+        </div>
         <footer>
             <p>Project maintained by <a href="https://github.com/francesco-mannella">francesco-mannella</a></p>
             <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
