--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="chrome=1">
-        <title>Neunet-basics by francesco-mannella</title>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Neunet-basics by francesco-mannella</title>
 
-        <link rel="stylesheet" href="stylesheets/styles.css">
-        <link rel="stylesheet" href="stylesheets/github-dark.css">
-        <script src="javascripts/scale.fix.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-        <!--[if lt IE 9]>
-            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
-    </head>
-    <body>
-        <div class="wrapper">
-            <header>
-                <h1>Neunet-basics</h1>
-                <h4>Getting started with neural networks in python</h4>
-                <p class="view"><a href="https://github.com/francesco-mannella/neunet-basics">View the Project on GitHub <small>francesco-mannella/neunet-basics</small></a></p>
-                <ul>
-                    <li><a href="https://github.com/francesco-mannella/neunet-basics/zipball/master">Download <strong>ZIP File</strong></a></li>
-                    <li><a href="https://github.com/francesco-mannella/neunet-basics/tarball/master">Download <strong>TAR Ball</strong></a></li>
-                    <li><a href="https://github.com/francesco-mannella/neunet-basics">View On <strong>GitHub</strong></a></li>
-                </ul>
-            
-            This site is meant to be a short tour through the main
-            classic neural network types and how to build them using
-            python.
-
-            </header>
-        </div>
-        <footer>
-            <p>Project maintained by <a href="https://github.com/francesco-mannella">francesco-mannella</a></p>
-            <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-        </footer>
-        <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-
-    </body>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Neunet-basics</h1>
+        <p>Basic knowledge on neural networks in python</p>
+        <p class="view"><a href="https://github.com/francesco-mannella/neunet-basics">View the Project on GitHub <small>francesco-mannella/neunet-basics</small></a></p>
+        <ul>
+          <li><a href="https://github.com/francesco-mannella/neunet-basics/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/francesco-mannella/neunet-basics/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/francesco-mannella/neunet-basics">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p>This site is a short tour through the main classic 
+neural network types and how to build them using python.</p>
+      </section>
+    </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/francesco-mannella">francesco-mannella</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
