--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
         </ul>
       </header>
       <section>
-        <p>This site is a short tour through the main classic 
-neural network types and how to build them using python.</p>
+        <p>
+        This site is a short tour through the main classic neural
+        network types and how to build them using python. We will use
+        the MNIST dataset of handwriting digits as a tool to explain
+        the functioning of all network presented.
+        </p>
+        <ol>
+            <li>
+                <a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/mnist.ipynb">
+                    The MNIST dataset
+                </a>
+            </li>
+        </ol>
       </section>
     </div>
     <footer>
