--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </header>
       <section>
         <p>
-        This site is a short tour through the main classic neural
-        network types and how to build them using python. We will use
+        This site is a short tour through classic neural networks 
+        and how to build them using python. We will use
         the MNIST dataset of handwriting digits as a tool to explain
         the functioning of all network presented.
         </p>
