--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     The MNIST dataset
                 </a>
             </li>
+            <li>
+                <a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/hopfield.ipynb">
+                    Hopfield networks
+                </a>
+            </li> 
         </ol>
       </section>
     </div>
