--- a/index.html
+++ b/index.html
@@ -1,57 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>Neunet-basics by francesco-mannella</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
+
+    <header>
+      <div class="container">
         <h1>Neunet-basics</h1>
-        <p>Basic knowledge on neural networks in python</p>
-        <p class="view"><a href="https://github.com/francesco-mannella/neunet-basics">View the Project on GitHub <small>francesco-mannella/neunet-basics</small></a></p>
-        <ul>
-          <li><a href="https://github.com/francesco-mannella/neunet-basics/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/francesco-mannella/neunet-basics/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/francesco-mannella/neunet-basics">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <p>
-        This site is a short tour through classic neural networks 
-        and how to build them using python. We will use
-        the MNIST dataset of handwriting digits as a tool to explain
-        the functioning of all network presented.
-        </p>
-        <ol>
-            <li>
-                <a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/mnist.ipynb">
-                    The MNIST dataset
-                </a>
-            </li>
-            <li>
-                <a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/hopfield.ipynb">
-                    Hopfield networks
-                </a>
-            </li> 
-        </ol>
+        <h2>Basic knowledge on neural networks in python</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/francesco-mannella/neunet-basics/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/francesco-mannella/neunet-basics/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/francesco-mannella/neunet-basics" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <p>This site is a short tour through classic neural networks and how to build them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all network presented.</p>
+
+<ul>
+<li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/mnist.ipynb">The MNIST dataset</a></li>
+<li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/hopfield.ipynb">Hopfield networks</a></li>
+</ul>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/francesco-mannella">francesco-mannella</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
   </body>
 </html>
