Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 
     <div class="container">
       <section id="main_content">
-        <p>This site is a short tour through classic neural networks and how to build them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all network presented.</p>
+        <h1>
+<a id="neunet-basics" class="anchor" href="#neunet-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>neunet-basics</h1>
+
+<h2>
+<a id="getting-started-with-neural-networks-in-python" class="anchor" href="#getting-started-with-neural-networks-in-python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting started with neural networks in python</h2>
+
+<p>This site is a short tour through classic neural networks and how to implement them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all network presented.</p>
 
 <ul>
 <li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/mnist.ipynb">The MNIST dataset</a></li>
