Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <ul>
 <li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/mnist.ipynb">The MNIST dataset</a></li>
+<li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/perceptron.ipynb">Perceptrons</a></li>
 <li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/hopfield.ipynb">Hopfield networks</a></li>
 </ul>
       </section>
