--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <p>This site is a short tour through classic neural networks and how to implement them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all network presented.</p>
 
 <ul>
-<li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/mnist.ipynb">The MNIST dataset</a></li>
-<li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/perceptron.ipynb">Perceptrons</a></li>
-<li><a href="http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/hopfield.ipynb">Hopfield networks</a></li>
+<li><a href="mnist.html">The MNIST dataset</a></li>
+<li><a href="perceptron.html">Perceptrons</a></li>
+<li><a href="hopfield.html">Hopfield networks</a></li>
 </ul>
       </section>
     </div>
