--- a/mnist.html
+++ b/mnist.html
@@ -194,19 +194,19 @@ It is a good database for people who want to try learning techniques and pattern
 </thead>
 <tbody>
 <tr>
-<td>training images:</td>
+<td><strong>training images:</strong></td>
 <td>60000</td>
 </tr>
 <tr>
-<td>test images:</td>
+<td><strong>test images:</strong></td>
 <td>10000</td>
 </tr>
 <tr>
-<td>image pixels:</td>
+<td><strong>image pixels:</strong></td>
 <td>28x28</td>
 </tr>
 <tr>
-<td>format:</td>
+<td><strong>image format:</strong></td>
 <td>raw vector of 784 elements</td>
 </tr>
 <tr>
