--- a/mnist.html
+++ b/mnist.html
@@ -549,7 +549,7 @@ Next cell is just for styling</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">IPython.core.display</span> <span class="kn">import</span> <span class="n">HTML</span>
@@ -567,7 +567,7 @@ Next cell is just for styling</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <style>
@@ -575,10 +575,10 @@ Next cell is just for styling</p>
 /* PRINT */
 
 #toc ol {
-    font-size: 16px; 
+    font-size: 20px; 
     line-height: 120%; 
     padding: 0; 
-    margin-left: 16px; 
+    margin-left: 20px; 
     list-style-type: decimal;
 }
 
@@ -602,19 +602,18 @@ div.input_area pre {
 }
 
 
-
-
+div.input_area  { padding: 10px;  }
 .rendered_html p{ text-align: left }
 div.input_area>div.highlight  { padding:10px; }
 
 /* FONT_CODE */
-.input_area pre { font-size:12px; line-height:120% }
+.input_area pre { font-size:10px; line-height:120% }
 
 /* FONT_TEXT */
-div.text_cell_render { font-size:16px;  line-height:120% }
+div.text_cell_render { font-size:20px;  line-height:120% }
 
 /* FONT_QUOTE */
-.text_cell_render pre { font-size:12px; line-height:120% }
+.text_cell_render pre { font-size:14px; line-height:120% }
 
 /* BACKGROUND */
 div .input_area { background-color:#333333;}
