--- a/perceptron.html
+++ b/perceptron.html
@@ -249,7 +249,7 @@ $$
 $$
 or, in linear algebra notation:
 $$
-\Delta \mathbf{w} = \eta(o_k - y)\mathbf{\tilde{x}} 
+\Delta \mathbf{w} = \eta(o_k - y)\mathbf{x} 
 $$
 where $\eta$ is a value determining the rate of weight change per timestep (it is typically very little) and $o_k - y$ is the error in reproducing the desired value.
 In python we write:</p>
