--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <li><a href="mnist.html">The MNIST dataset</a></li>
 <li><a href="perceptron.html">Perceptrons</a>
     <ul>
-        <li><a href="perceptron-simple-simulation.html">Perceptrons: a simple simulation</a>
-        <li><a href="perceptron-MNIST-simulation.html">Perceptrons: Recognising the MNIST digits</a>
+        <li><a href="perceptron-simple-simulation.html">A simple simulation</a>
+        <li><a href="perceptron-MNIST-simulation.html">Recognising the MNIST digits</a>
     </ul>
 </li>
 <li><a href="hopfield.html">Hopfield networks</a></li>
