--- a/index.html
+++ b/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Neunet-basics by francesco-mannella</title>
-  </head>
+        <title>Neunet-basics by francesco-mannella</title>
+    </head>
 
-  <body>
+    <body>
 
-    <header>
-      <div class="container">
-        <h1>Neunet-basics</h1>
-        <h2>Basic knowledge on neural networks in python</h2>
+        <header>
+            <div class="container">
+                <h1>Neunet-basics</h1>
+                <h2>Basic knowledge on neural networks in python</h2>
 
-        <section id="downloads">
-          <a href="https://github.com/francesco-mannella/neunet-basics/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/francesco-mannella/neunet-basics/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/francesco-mannella/neunet-basics" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+                <section id="downloads">
+                    <a href="https://github.com/francesco-mannella/neunet-basics/zipball/master" class="btn">Download as .zip</a>
+                    <a href="https://github.com/francesco-mannella/neunet-basics/tarball/master" class="btn">Download as .tar.gz</a>
+                    <a href="https://github.com/francesco-mannella/neunet-basics" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+                </section>
+            </div>
+        </header>
 
-    <div class="container">
-      <section id="main_content">
-        <h1>
-<a id="neunet-basics" class="anchor" href="#neunet-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>neunet-basics</h1>
+        <div class="container">
+            <section id="main_content">
+                <h1><a id="neunet-basics" class="anchor" href="#neunet-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>neunet-basics</h1>
 
-<h2>
-<a id="getting-started-with-neural-networks-in-python" class="anchor" href="#getting-started-with-neural-networks-in-python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting started with neural networks in python</h2>
+                <h2><a id="getting-started-with-neural-networks-in-python" class="anchor" href="#getting-started-with-neural-networks-in-python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting started with neural networks in python</h2>
 
-<p>This site is a short tour through classic neural networks and how to implement them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all network presented.</p>
+                <p>This site is a short tour through classic neural networks and how to implement them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all network presented.</p>
 
-<ul>
-<li><a href="mnist.html">The MNIST dataset</a></li>
-<li><a href="perceptron.html">Perceptrons</a>
-    <ul>
-        <li><a href="perceptron-simple-simulation.html">A simple simulation</a>
-        <li><a href="perceptron-MNIST-simulation.html">Recognising the MNIST digits</a>
-    </ul>
-</li>
-<li><a href="hopfield.html">Hopfield networks</a></li>
-</ul>
-      </section>
-    </div>
-
-    
-  </body>
+                <ul>
+                    <li><a href="mnist.html">The MNIST dataset</a></li>
+                    <li><a href="perceptron.html">Perceptrons</a>
+                        <ul>
+                            <li><a href="perceptron-simple-simulation.html">A simple simulation</a></li>
+                            <li> <a href="perceptron-MNIST-simulation.html">Recognising the MNIST digits</a></li>
+                        </ul>
+                    </li>
+                    <li> <a href="hopfield.html">Hopfield networks</a>
+                        <ul>
+                            <li><a href="hopfield-MNIST-simulation.html">Storing and recalling the MNIST digits</a></li>
+                        </ul>
+            
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </body>
 </html>
