--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             
                     </li>
                 </ul>
+                <br>
+                <ul><li> <a href="Utilities.html">Utilities</a></ul>
             </section>
         </div>
     </body>
