--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <h2><a id="getting-started-with-neural-networks-in-python" class="anchor" href="#getting-started-with-neural-networks-in-python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting started with neural networks in python</h2>
 
-                <p>This site is a short tour through classic neural networks and how to implement them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all network presented.</p>
+                <p>This site is a short tour through classic neural networks and how to implement them using python. We will use the MNIST dataset of handwriting digits as a tool to explain the functioning of all the networks presented.</p>
 
                 <ul>
                     <li><a href="mnist.html">The MNIST dataset</a></li>
