--- a/Utilities.html
+++ b/Utilities.html
@@ -174,7 +174,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Utilities">Utilities<a class="anchor-link" href="#Utilities">&#182;</a></h3><p>The file <code>utils.py</code> contains nsome usefull stuff which is used throughout all notebooks in this site.</p>
+<h3 id="Utilities">Utilities<a class="anchor-link" href="#Utilities">&#182;</a></h3><p>The file <code>utils.py</code> contains some usefull stuff which is used throughout all notebooks in this site.</p>
 <p>First of all it includes the initialization of all constants and variables for the use of MNIST database:</p>
 
 </div>
