--- a/perceptron.html
+++ b/perceptron.html
@@ -195,7 +195,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Definitions">Definitions<a class="anchor-link" href="#Definitions">&#182;</a></h3><p>The first layer of units is $\mathbf{x} = (x_0,\dots,x_{n+1})$. At each timestep all units of this layer are filled up with values from an input vector $\mathbf{p}_k = (1, p_0,\dots,p_n)$. The first element of the input is prmanently set to 1. We call the first unit receiving the steady signal the bias unit. Each connection from a unit $x_i$ of the first layer to the output unit $y$ has a weight $w_i$ that is initially set to 0.</p>
+<h3 id="Definitions">Definitions<a class="anchor-link" href="#Definitions">&#182;</a></h3><p>The first layer of units is $\mathbf{x} = (x_0,\dots,x_{n+1})$. At each timestep all units of this layer are filled up with values from an input vector $\mathbf{p}_k = (1, p_0,\dots,p_n)$. The first element of the input is permanently set to 1. We call the first unit receiving the steady signal the bias unit. Each connection from a unit $x_i$ of the first layer to the output unit $y$ has a weight $w_i$ that is initially set to 0.</p>
 <h3 id="Spreading--of-activations">Spreading  of activations<a class="anchor-link" href="#Spreading--of-activations">&#182;</a></h3><p>The activation of the output unit is given by:</p>
 $$ 
 \begin{eqnarray}
