--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li><a href="perceptron.html">Perceptrons</a>
                         <ul>
                             <li><a href="perceptron-simple-simulation.html">A simple simulation</a></li>
+                            <li><a href="perceptron-limitations.html">Limitations</a></li>
                             <li> <a href="perceptron-MNIST-simulation.html">Recognising the MNIST digits</a></li>
                         </ul>
                     </li>
